--- a/src/pages/pages.css
+++ b/src/pages/pages.css
@@ -562,6 +562,13 @@
   padding: var(--components-tokens--site--course-section--featured--padding);
 }
 
+.featured-course-card::before {
+  background: linear-gradient(180deg, var(--color-surface), 35%, var(--color-surface), 45%, transparent);
+  z-index: 1;
+  content: "";
+  opacity: 0.8;
+}
+
 .featured-course-card__content {
   position: relative;
   z-index: 1;
